# seek_coding_challenge

./: .dockerignore  .envrc.template  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
seek_coding_challenge/: __main__.py
seek_coding_challenge/objects/: job.py  profile.py
tests/seek_coding_challenge/objects/: test_job.py  test_profile.py
